<resources>
    <string name="app_name">Hirsute Haberdashery</string>
    <string name="business_name">Hirsute Haberdashery</string>
    <string name="email">info@headyhairshirts.com</string>
    <string name="phone">513-347-HAIR</string>
    <string name="web">www.headyhairshirts.com</string>
    <string name="quote">"With the right hair, they\'ll never wonder what you wear under there!"</string>
</resources>
