<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            style="@style/business_name"
            android:text="@string/business_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/icon_layouts"
            android:layout_marginTop="30dp">

            <ImageView
                style="@style/icons"
                android:src="@drawable/phone" />

            <TextView
                style="@style/icon_text"
                android:text="@string/phone" />
        </LinearLayout>

        <LinearLayout style="@style/icon_layouts">

            <ImageView
                style="@style/icons"
                android:src="@drawable/email" />

            <TextView
                style="@style/icon_text"
                android:text="@string/email" />
        </LinearLayout>

        <LinearLayout style="@style/icon_layouts">

            <ImageView
                style="@style/icons"
                android:src="@drawable/web" />

            <TextView
                style="@style/icon_text"
                android:text="@string/web" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/gudea_bold"
            android:padding="15dp"
            android:paddingTop="15dp"
            android:text="@string/quote"
            android:textSize="25sp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/shel"
        style="@style/business_image"
        android:src="@drawable/handhapp" />

</LinearLayout>
